# AC_Cost_Optimizer

./: Dockerfile  app.py  cool_budget_ai  evaluation.py  inference.py  openenv.yaml  readme.txt  run_easy_task.py  run_eval.py  setup.py  standalone_easy_task.py  unified_easy_task.py  validate.py
baselines/: rule_based.py  smart_heuristic.py
env/: comfort.py  constants.py  dynamics.py  occupancy.py  pricing.py  reward.py  state.py  thermal_env.py  weather.py
graders/: grader.py
my_env/: __init__.py  client.py  models.py  openenv.yaml  pyproject.toml
my_env/server/: Dockerfile  __init__.py  app.py  my_env_environment.py
smart_hvac_env/: api.py  comfort.py  env.py  pricing.py  replay_buffer.py  reward.py  thermal.py
smart_hvac_env/config/: env_config.yaml
smart_hvac_env/examples/: TRAINING_GUIDE.md  offline_rl_example.py  train_dqn.py  train_ppo.py  train_sac.py
support_ticket_system/: README.md  env.py  factory.py  graders.py  models.py  openenv.yaml  run_all.py  run_easy.py  run_hard.py  run_medium.py  run_parallel.py  run_random.py  tasks.py
tasks/: generator.py  task_configs.py
tests/: test_env.py
